most basic view of levels

--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -7,4 +7,43 @@ Type:
 
 <!-- TODO: display table of levels -->
 
+<p>Welcome to the journey with Itty Bitty!</p>
+
+  <table border="3">
+    <thead>
+      <tr>
+        <th>Beginner</th>
+        <th>Intermediate</th> 
+        <th>Advanced</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>6</td> 
+        <td>11</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>7</td> 
+        <td>12</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>8</td> 
+        <td>13</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>9</td> 
+        <td>14</td>
+      </tr>
+	  <tr>
+        <td>5</td>
+        <td>10</td> 
+        <td>15</td>
+      </tr>
+    </tbody>
+  </table> <br>
+
 <a href="/ref/<%= type %>">Reference sheet</a>
