overwrites ben's last commit cuz quiz pg not working

--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,67 +1,38 @@
 Type <%= type %>, level <%= level %>
 
 <h1>Tutorial</h1>
-	<div class='container'>
-	<!- currently just dislays the content tutorial description
-	  		will add the actual content later -->
-	<%=  tutorial[0].description %>
-	</div>
-</br>
+<!-- currently just dislays the content tutorial description
+        will add the actual content later -->
+<%=  tutorial[0].description %>
+<br>
 
 
-<!-- TODO: tutorial content with exercise -->
+<h2>Questions</h2>
+
+<%= questions[0].question %>
+<br>
+<% if(questions[0].choice1){ %> <%= questions[0].choice1 %> <%} %>
+<br>
+<% if(questions[0].choice2){ %> <%= questions[0].choice2 %> <%} %>
+<br>
+<% if(questions[0].choice3){ %> <%= questions[0].choice3 %> <%} %>
+<br>
+<% if(questions[0].choice4){ %> <%= questions[0].choice4 %> <%} %>
+<br>
 
 
-<h1>Questions</h1>
-	<div class='container'>	
-	  
-		<%=  questions[0].question %>
-		<% var is_mc = true; %>
-	  	</br>
-	  	<!-- Assumed that if there is no 'choice1', it's a long-answer question -->
-	  	<form>
-		<% if(questions[0].choice1){ %> 
-			<input type="radio" name="radio_but" value="a"> <%= questions[0].choice1 } %>
-		<% else{ is_mc = false; %> 
-			<input type="text" id="soln"> <%}%>
-	  	</br>
-		<% if(questions[0].choice2){ %> 
-			<input type="radio" name="radio_but" value="b"> <%= questions[0].choice2 } %>
-		</br>
-		<% if(questions[0].choice3){ %> 
-			<input type="radio" name="radio_but" value="c"> <%= questions[0].choice3 } %>
-		</br>
-		<% if(questions[0].choice4){ %> 
-			<input type="radio" name="radio_but" value="d"> <%= questions[0].choice4 } %>
-		</form>
-		
-		<button id="submit" onClick="verify()">Submit Answer</button>
-		
-		<%function verify() {
-			if (is_mc) {
-				alert($("input[radio_but]:checked").val() === questions[0].answer);
-			}
-			else {
-				alert($("#soln").val() === questions[0].answer);
-			} 
-
-		}%>
-
-	</div>
-
-</br>
-
-
-<h1>Answers</h1>
+<h2>Answers</h2>
 <div>
-Dunno if needed TBH, build up the answer forms/checks above
+  <input type="text" name="answer">
+  <br>
+  <input type="submit">
 </div>
-</br>
+<br>
 
-<button id="demo" onclick="myFunction()">Next Question</button>
+<button id="demo">Next Question</button>
 
 <script>
-function myFunction() {
-    document.getElementById("demo").style.color = "red";
-}
+  document.getElementById("demo").onclick = function() {
+    this.style.color = "red";
+  }
 </script>
