Add link to each level page

--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -1,5 +1,16 @@
 <h1>Levels</h1>
 
+<head>
+<style>
+table, th, td {
+    border: 5px solid grey;
+}
+th, td {
+    padding: 15px;
+}
+</style>
+</head>
+
 Type:
 <% if (type) {%>
   <%= type %>
@@ -9,7 +20,7 @@ Type:
 
 <p>Welcome to the journey with Itty Bitty!</p>
 
-  <table border="3">
+  <table id="tLevel" border="3">
     <thead>
       <tr>
         <th>Beginner</th>
@@ -19,29 +30,29 @@ Type:
     </thead>
     <tbody>
       <tr>
-        <td>1</td>
-        <td>6</td> 
-        <td>11</td>
+        <td><a href="/tutorials/bitwise/1" style="display:block;">1</a></td>
+        <td><a href="/tutorials/bitwise/6" style="display:block;">6</a></td>
+        <td><a href="/tutorials/bitwise/11" style="display:block;">11</a></td>
       </tr>
       <tr>
-        <td>2</td>
-        <td>7</td> 
-        <td>12</td>
+        <td><a href="/tutorials/bitwise/2" style="display:block;">2</a></td>
+		<td><a href="/tutorials/bitwise/7" style="display:block;">7</a></td>
+		<td><a href="/tutorials/bitwise/12" style="display:block;">12</a></td>
       </tr>
       <tr>
-        <td>3</td>
-        <td>8</td> 
-        <td>13</td>
+		<td><a href="/tutorials/bitwise/3" style="display:block;">3</a></td>
+		<td><a href="/tutorials/bitwise/8" style="display:block;">8</a></td>
+		<td><a href="/tutorials/bitwise/13" style="display:block;">13</a></td>
       </tr>
       <tr>
-        <td>4</td>
-        <td>9</td> 
-        <td>14</td>
+        <td><a href="/tutorials/bitwise/4" style="display:block;">4</a></td>
+		<td><a href="/tutorials/bitwise/9" style="display:block;">9</a></td>
+		<td><a href="/tutorials/bitwise/14" style="display:block;">14</a></td>
       </tr>
 	  <tr>
-        <td>5</td>
-        <td>10</td> 
-        <td>15</td>
+        <td><a href="/tutorials/bitwise/5" style="display:block;">5</a></td>
+		<td><a href="/tutorials/bitwise/10" style="display:block;">10</a></td>
+		<td><a href="/tutorials/bitwise/15" style="display:block;">15</a></td>
       </tr>
     </tbody>
   </table> <br>
