Fixed tiny error in level selection

--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -30,29 +30,29 @@ Type:
     </thead>
     <tbody>
       <tr>
-        <td><a href="/tutorials/bitwise/1" style="display:block;">1</a></td>
-        <td><a href="/tutorials/bitwise/6" style="display:block;">6</a></td>
-        <td><a href="/tutorials/bitwise/11" style="display:block;">11</a></td>
+        <td><a href="/tutorials/<%= type %>/1" style="display:block;">1</a></td>
+        <td><a href="/tutorials/<%= type %>/6" style="display:block;">6</a></td>
+        <td><a href="/tutorials/<%= type %>/11" style="display:block;">11</a></td>
       </tr>
       <tr>
-        <td><a href="/tutorials/bitwise/2" style="display:block;">2</a></td>
-		<td><a href="/tutorials/bitwise/7" style="display:block;">7</a></td>
-		<td><a href="/tutorials/bitwise/12" style="display:block;">12</a></td>
+        <td><a href="/tutorials/<%= type %>/2" style="display:block;">2</a></td>
+		<td><a href="/tutorials/<%= type %>/7" style="display:block;">7</a></td>
+		<td><a href="/tutorials/<%= type %>/12" style="display:block;">12</a></td>
       </tr>
       <tr>
-		<td><a href="/tutorials/bitwise/3" style="display:block;">3</a></td>
-		<td><a href="/tutorials/bitwise/8" style="display:block;">8</a></td>
-		<td><a href="/tutorials/bitwise/13" style="display:block;">13</a></td>
+		<td><a href="/tutorials/<%= type %>/3" style="display:block;">3</a></td>
+		<td><a href="/tutorials/<%= type %>/8" style="display:block;">8</a></td>
+		<td><a href="/tutorials/<%= type %>/13" style="display:block;">13</a></td>
       </tr>
       <tr>
-        <td><a href="/tutorials/bitwise/4" style="display:block;">4</a></td>
-		<td><a href="/tutorials/bitwise/9" style="display:block;">9</a></td>
-		<td><a href="/tutorials/bitwise/14" style="display:block;">14</a></td>
+        <td><a href="/tutorials/<%= type %>/4" style="display:block;">4</a></td>
+		<td><a href="/tutorials/<%= type %>/9" style="display:block;">9</a></td>
+		<td><a href="/tutorials/<%= type %>/14" style="display:block;">14</a></td>
       </tr>
 	  <tr>
-        <td><a href="/tutorials/bitwise/5" style="display:block;">5</a></td>
-		<td><a href="/tutorials/bitwise/10" style="display:block;">10</a></td>
-		<td><a href="/tutorials/bitwise/15" style="display:block;">15</a></td>
+        <td><a href="/tutorials/<%= type %>/5" style="display:block;">5</a></td>
+		<td><a href="/tutorials/<%= type %>/10" style="display:block;">10</a></td>
+		<td><a href="/tutorials/<%= type %>/15" style="display:block;">15</a></td>
       </tr>
     </tbody>
   </table> <br>
