--- a/assets/styles/_core.scss
+++ b/assets/styles/_core.scss
@@ -155,6 +155,12 @@ select {
   padding-left: 5px;
 }
 
+input[type='radio'],
+input[type='checkbox'] {
+  margin-right: 0.5em;
+  width: auto;
+}
+
 
 /** Buttons */
 
