--- a/views/tutorials.ejs
+++ b/views/tutorials.ejs
@@ -1,4 +1,13 @@
 <h1>Tutorials</h1>
 
-<a href='tutorials/bitwise'>Bitwise operations</a>
-<a href='tutorials/bases'>Numerical bases</a>
+<div id='topics_menu'>
+  <a href='tutorials/bitwise'>
+    <img src='../images/bit.png'>
+    <p>Bitwise operations</p>
+  </a>
+
+  <a href='tutorials/bases'>
+    <img src='../images/convert.png'>
+    <p>Numerical bases</p>
+  </a>
+</div>
