--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -1,8 +1,8 @@
 <h1>
-<% if (type == 'bitwise') {%>
-    <%='Bitwise'%>
+<% if (type === 'bitwise') {%>
+    Bitwise 
     <% } else { %>
-    <%='Bases'%>
+    Base 
     <% } %> 
     Levels
 </h1>
