--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -332,6 +332,14 @@ footer {
   }
 }
 
+#levels_table {
+  text-align: center;
+
+  th {
+    text-align: center;
+  }
+}
+
 
 // Level
 // ========================================================
