--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -1,34 +1,20 @@
 <h1>
 <% if (type === 'bitwise') {%>
-    Bitwise 
-    <% } else { %>
-    Base 
-    <% } %> 
-    Levels
+  Bitwise
+<% } else { %>
+  Base
+    <% } %>
+Levels
 </h1>
 
-<head>
-  <style>
-    table, th, td {
-        border: 5px solid grey;
-        text-align: center
-    }
-    th, td {
-        padding: 15px;
-    }
-    div {
-        text-align: center;
-    }
-  </style>
-</head>
 
 <p>Welcome to the journey with Itty Bitty!</p>
 
-  <table id="tLevel" border="3">
+  <table id="levels_table">
     <thead>
       <tr>
         <th>Beginner</th>
-        <th>Intermediate</th> 
+        <th>Intermediate</th>
         <th>Advanced</th>
       </tr>
     </thead>
