Minor grammar change

--- a/views/levels.ejs
+++ b/views/levels.ejs
@@ -15,7 +15,7 @@ Levels
     <tr>
 	  <th>Level Number</th>
 	  <th>Description</th>
-	  <th>Difficulties</th>
+	  <th>Difficulty</th>
     </tr>
   </thead>
   <tbody>
