Show tutorials links only if logged in

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
         <% if (!req.user) { %>
           <li><a href='/login'>Login</a></li>
           <li><a href='/register' id='register'>Sign up</a></li>
-
+        <% } else { %>
           <li><a href='/tutorials'>Tutorials</a></li>
         <% } %>
       </ul>
