--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,24 +7,24 @@
     <% }) %>
   <% } %>
 
-  <form role="form" action="/auth/local" method="post">
+  <form role='form' action='/auth/local' method='post'>
     <label>Username or Email:</label>
-    <input type="text" name="identifier" placeholder="Username or Email" required>
+    <input type='text' name='identifier' placeholder='Username or Email' required>
 
     <label>Password:</label>
-    <input type="password" name="password" placeholder="Password" required>
+    <input type='password' name='password' placeholder='Password' required>
 
-    <input type="submit" value="Login">
+    <input type='submit' value='Login'>
   </form>
 
   <% if (providers) {%>
     <div id='login-providers'>
       <h4>You can also use one of these...</h4>
 
-      <a href="/auth/facebook" role="button">Facebook</a>
-      <a href="/auth/twitter" role="button">Twitter</a>
-      <a href="/auth/google" role="button">Google</a>
-      <a href="/auth/github" role="button">GitHub</a>
+      <a href='/auth/facebook' role='button'>Facebook</a>
+      <a href='/auth/twitter' role='button'>Twitter</a>
+      <a href='/auth/google' role='button'>Google</a>
+      <a href='/auth/github' role='button'>GitHub</a>
     </div>
   <% } %>
 </div>
