--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -19,4 +19,10 @@
 
     <input type='submit' value='Sign up'>
   </form>
+
+  <div id='login-providers'>
+    <h4>Or you can login using one of these...</h4>
+
+    <a href='/login'>Facebook, Twitter, Google, GitHub</a>
+  </div>
 </div>
