--- a/assets/styles/_core.scss
+++ b/assets/styles/_core.scss
@@ -324,7 +324,7 @@ nav {
       text-align: center;
 
       a {
-        display: block;
+        display: inline-block;
         height: 3em;
         line-height: 3em;
         padding: 0 1em;
